# ClawAI

./: .coverage  .coveragerc  .gitignore  ClawAI.bat  README.md  TODO.md  api.py  api.py.rej  api_chat_patch.py  arquivos.txt  claw.py  clawai_autopilot_stage2.patch  estrutura.txt  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  verify.bat  verify.py  verify_report.json
.clawai/: index.json  symbol_index.json
.continue/rules/: new-rule.md
.github/workflows/: tests.yml
clawai/: bootstrap.py  main.py
clawai/agent/: __init__.py  abstract_agent_loop.py  abstract_autonomous_agent.py  abstract_checkpoint_manager.py  agent_context.py  agent_engine.py  agent_loop.py  autonomous_agent.py  checkpoint_manager.py  execution_events.py  execution_session.py  execution_state.py  goal_execution_result.py  metrics.py  retry_policy.py
clawai/agents/: agent.py  agent_loop.py  autofix_agent.py  backup_manager.py  code_agent.py  patch_agent.py  patch_applier.py  reflection_agent.py  specialist_agent.py  team_leader.py
clawai/ai/: __init__.py  router.py
clawai/api/: __init__.py  autonomy_api.py  bridge_api.py  chat_api.py  evolution_api.py  implement_api.py  intelligence_api.py  tools_api.py  workspaces_api.py
clawai/application/: __init__.py  application.py
clawai/autonomy/: __init__.py  agent_runtime.py  autonomy_loop.py  context_manager.py  contracts.py  execution_state.py  llm_metrics.py  (+4 more)
configs/: config.yaml
docs/: agent.md  autonomous_agent_roadmap.md  cognition.md  planner.md  technical_backlog.md
frontend/: package-lock.json  package.json
(+392 files in other folders)
