[project]
name = "clawai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.115.0",
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "google-genai>=2.10.0",
    "google-generativeai>=0.8.6",
    "ollama>=0.6.2",
    "openai>=2.43.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
